--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "TRAVIS is donions.",
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint hello.js",
-    "t-test": "tape hello.test.js | tap-spec"
+    "test": "./node_modules/jshint/bin/jshint hello.js && tape hello.test.js | tap-spec"
   },
   "repository": {
     "type": "git",
